BACKEND - Criação da entidade Oficina
Criando entities, repositorio, cadastro e rotas
