# server.js
@@ -1,6 +1,8 @@
 import express from 'express'
+// CHAMADA DAS ROTAS
 import servicoRouter from './routes/servicoRoute.js'
 import usuarioRouter from './routes/usuarioRoute.js'
+import oficinaRouter from './routes/oficinaRoute.js'
 import swaggerUi from 'swagger-ui-express'
 import cookieParser from 'cookie-parser';
 import cors from 'cors';
@@ -15,7 +17,8 @@ server.use(cookieParser());
 
 server.use("/docs", swaggerUi.serve, swaggerUi.setup(outputJson));
 server.use("/servico", servicoRouter);
-server.use("/usuario", usuarioRouter)
+server.use("/usuario", usuarioRouter);
+server.use("/oficina", oficinaRouter);
 
 server.listen(5000, function() {
     console.log("backend em funcionamento!");
